# LockLane

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  EXECUTION_LOG.md  IMPLEMENTATION_PLAN_AGENT.md
plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
plugin/.intellijPlatform/localPlatformArtifacts/IC-252.28539.33/: bundledModule-intellij-platform-test-runtime-IC-252.28539.33.xml  bundledPlugin-org.intellij.plugins.markdown-IC-252.28539.33.xml
plugin/src/main/kotlin/io/locklane/: LockLaneToolWindowFactory.kt  LocklaneToolWindowFactory.kt
plugin/src/main/kotlin/io/locklane/action/: ActionUtils.kt  ApplyPlanAction.kt  CreatePRAction.kt  ExportPlanAction.kt  RollbackHistoryAction.kt  RunBaselineAction.kt  RunPlanAction.kt  SelectManifestAction.kt  VerifyPlanAction.kt
plugin/src/main/kotlin/io/locklane/activity/: AutoScanActivity.kt  VulnerabilityCheckActivity.kt
plugin/src/main/kotlin/io/locklane/editor/: DependencyLineMarkerProvider.kt
plugin/src/test/kotlin/io/locklane/: LockLaneBuildConfigTest.kt  LocklaneBuildConfigTest.kt
plugin/src/test/resources/fixtures/: apply_result.json  baseline_error.json  baseline_result.json  upgrade_plan.json  verification_report.json
resolver/: README.md  pyproject.toml
resolver-cargo/: Cargo.toml
resolver-cargo/src/: applier.rs  cargo_lock.rs  cargo_parser.rs  cargo_resolver.rs  crates_io.rs  main.rs  models.rs  osv.rs  planner.rs  simulator.rs  verifier.rs
resolver/src/locklane_resolver/: __init__.py  __main__.py  applier.py  cache.py  cli.py  graph.py  models.py  osv.py  planner.py  pypi.py  pyproject_parser.py  resolver.py  simulator.py  uv_lock.py  verifier.py
resolver/tests/: test_applier.py  test_cache.py  test_cli.py  test_e2e.py  test_graph.py  test_planner.py  test_pypi.py  test_pyproject_parser.py  test_resolver.py  test_simulator.py  test_uv_lock.py  test_verifier.py
resolver/tests/fixtures/: conflict_stderr_uv.txt  data_science.txt  pyproject_pep621.toml  pyproject_pep735.toml  pyproject_poetry.toml  web_app.txt
schemas/: README.md  apply_result.schema.json  baseline_result.schema.json  candidate_result.schema.json  upgrade_plan.schema.json  verification_report.schema.json
scripts/: README.md  bootstrap-dev.sh  run-plugin-tests.sh  run-resolver-tests.sh  smoke-e2e.sh
testbench/: pyproject.toml  requirements-dev.txt  requirements.txt
testbench-uv/: pyproject.toml
(+48 files in other folders)
