[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "locklane-resolver"
version = "0.1.0"
description = "Resolver worker for Locklane PyCharm plugin"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mario Mesas" }
]
keywords = ["python", "dependencies", "resolver", "locklane"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.scripts]
locklane-resolver = "locklane_resolver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/locklane_resolver"]

