# LockLane testbench – PEP 621 pyproject.toml (multi-manifest testing)

[project]
name = "locklane-testbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy==2.0.0",
    "alembic==1.10.0",
    "celery==5.3.0",
    "redis==4.5.0",
    "boto3==1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.3.0",
    "ruff==0.0.270",
]
